--- a/src/styles/palette/theme-light.less
+++ b/src/styles/palette/theme-light.less
@@ -39,7 +39,7 @@
 @axfdg-body-active-bg: #ecf4fc;
 @axfdg-body-color: #606c80;
 @axfdg-scroll-size: 11px;
-@axfdg-scroll-track-bg: #fcfcfc;
+@axfdg-scroll-track-bg: hsl(0, 0%, 99%);
 @axfdg-scroll-thumb-radius: 6px;
 @axfdg-scroll-thumb-bg: #98a2b2;
 @axfdg-scroll-thumb-hover-bg: #606c80;
